Fix Source implementation